--- a/sample.ipynb
+++ b/sample.ipynb
@@ -13,8 +13,8 @@
    "id": "fbc121e30a2defb3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:23.535174Z",
-     "start_time": "2025-03-13T11:51:22.499100Z"
+     "end_time": "2025-03-13T12:35:07.664861Z",
+     "start_time": "2025-03-13T12:35:07.651973Z"
     }
    },
    "source": [
@@ -34,6 +34,23 @@
     "from nltk.stem import WordNetLemmatizer\n",
     "import re\n",
     "import warnings\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.metrics import classification_report, f1_score, precision_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.metrics import f1_score, precision_score, recall_score, accuracy_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# For NLP chatbot\n",
@@ -67,12 +84,12 @@
        "True"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 87
+   "execution_count": 111
   },
   {
    "cell_type": "markdown",
@@ -87,15 +104,15 @@
    "id": "c3c4253ba58939f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:23.565334Z",
-     "start_time": "2025-03-13T11:51:23.542449Z"
+     "end_time": "2025-03-13T12:35:07.814302Z",
+     "start_time": "2025-03-13T12:35:07.790385Z"
     }
    },
    "source": [
     "df = pd.read_csv('data/edited_skill_exchange_dataset.csv')"
    ],
    "outputs": [],
-   "execution_count": 88
+   "execution_count": 112
   },
   {
    "cell_type": "markdown",
@@ -111,8 +128,8 @@
    "id": "eb947f599c010912",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:23.636731Z",
-     "start_time": "2025-03-13T11:51:23.629288Z"
+     "end_time": "2025-03-13T12:35:07.835325Z",
+     "start_time": "2025-03-13T12:35:07.827491Z"
     }
    },
    "source": [
@@ -162,7 +179,7 @@
      ]
     }
    ],
-   "execution_count": 89
+   "execution_count": 113
   },
   {
    "cell_type": "markdown",
@@ -177,8 +194,8 @@
    "id": "577b2c28632f85ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:24.168150Z",
-     "start_time": "2025-03-13T11:51:23.769755Z"
+     "end_time": "2025-03-13T12:35:08.312587Z",
+     "start_time": "2025-03-13T12:35:07.910024Z"
     }
    },
    "source": [
@@ -417,7 +434,7 @@
      ]
     }
    ],
-   "execution_count": 90
+   "execution_count": 114
   },
   {
    "cell_type": "markdown",
@@ -433,8 +450,8 @@
    "id": "8a7ca75d2db4fcb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:25.370373Z",
-     "start_time": "2025-03-13T11:51:24.173161Z"
+     "end_time": "2025-03-13T12:35:09.366485Z",
+     "start_time": "2025-03-13T12:35:08.382445Z"
     }
    },
    "source": [
@@ -473,7 +490,7 @@
     "plt.close()"
    ],
    "outputs": [],
-   "execution_count": 91
+   "execution_count": 115
   },
   {
    "cell_type": "markdown",
@@ -488,8 +505,8 @@
    "id": "33b46cd18c959443",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:25.439850Z",
-     "start_time": "2025-03-13T11:51:25.435783Z"
+     "end_time": "2025-03-13T12:35:09.445706Z",
+     "start_time": "2025-03-13T12:35:09.440404Z"
     }
    },
    "source": [
@@ -502,7 +519,7 @@
     "    return list(set(all_items))"
    ],
    "outputs": [],
-   "execution_count": 92
+   "execution_count": 116
   },
   {
    "cell_type": "markdown",
@@ -517,8 +534,8 @@
    "id": "883f21790111ea3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:25.634915Z",
-     "start_time": "2025-03-13T11:51:25.588690Z"
+     "end_time": "2025-03-13T12:35:09.689215Z",
+     "start_time": "2025-03-13T12:35:09.631872Z"
     }
    },
    "source": [
@@ -541,7 +558,7 @@
      ]
     }
    ],
-   "execution_count": 93
+   "execution_count": 117
   },
   {
    "cell_type": "markdown",
@@ -556,8 +573,8 @@
    "id": "7709cad99d6f128",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:26.243785Z",
-     "start_time": "2025-03-13T11:51:25.642020Z"
+     "end_time": "2025-03-13T12:35:10.390891Z",
+     "start_time": "2025-03-13T12:35:09.785543Z"
     }
    },
    "source": [
@@ -584,7 +601,7 @@
     "plot_top_items(df, 'desired_skills', 'Desired Skills')"
    ],
    "outputs": [],
-   "execution_count": 94
+   "execution_count": 118
   },
   {
    "metadata": {},
@@ -595,8 +612,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:26.441119Z",
-     "start_time": "2025-03-13T11:51:26.318101Z"
+     "end_time": "2025-03-13T12:35:10.520829Z",
+     "start_time": "2025-03-13T12:35:10.395122Z"
     }
    },
    "cell_type": "code",
@@ -623,7 +640,7 @@
    ],
    "id": "96efd51e8ee92d1f",
    "outputs": [],
-   "execution_count": 95
+   "execution_count": 119
   },
   {
    "metadata": {},
@@ -634,8 +651,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:26.531154Z",
-     "start_time": "2025-03-13T11:51:26.520808Z"
+     "end_time": "2025-03-13T12:35:10.598978Z",
+     "start_time": "2025-03-13T12:35:10.587462Z"
     }
    },
    "cell_type": "code",
@@ -662,7 +679,7 @@
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 120
   },
   {
    "metadata": {},
@@ -673,8 +690,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:28.079258Z",
-     "start_time": "2025-03-13T11:51:26.603461Z"
+     "end_time": "2025-03-13T12:35:12.109775Z",
+     "start_time": "2025-03-13T12:35:10.663889Z"
     }
    },
    "cell_type": "code",
@@ -699,13 +716,13 @@
    ],
    "id": "8acfb43beefbdac6",
    "outputs": [],
-   "execution_count": 97
+   "execution_count": 121
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:29.298936Z",
-     "start_time": "2025-03-13T11:51:28.229871Z"
+     "end_time": "2025-03-13T12:35:13.261909Z",
+     "start_time": "2025-03-13T12:35:12.181626Z"
     }
    },
    "cell_type": "code",
@@ -771,7 +788,7 @@
      ]
     }
    ],
-   "execution_count": 98
+   "execution_count": 122
   },
   {
    "metadata": {},
@@ -782,8 +799,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:51:30.163342Z",
-     "start_time": "2025-03-13T11:51:29.305873Z"
+     "end_time": "2025-03-13T12:35:14.174598Z",
+     "start_time": "2025-03-13T12:35:13.324161Z"
     }
    },
    "cell_type": "code",
@@ -844,7 +861,7 @@
      ]
     }
    ],
-   "execution_count": 99
+   "execution_count": 123
   },
   {
    "metadata": {},
@@ -857,24 +874,17 @@
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:53:42.847833Z",
-     "start_time": "2025-03-13T11:51:30.228639Z"
+     "start_time": "2025-03-13T12:35:14.240477Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Skill Matching using Decision Tree\n",
     "def skill_matching_comparison(df):\n",
-    "    from sklearn.svm import SVC\n",
-    "    from sklearn.tree import DecisionTreeClassifier\n",
-    "    from sklearn.neighbors import KNeighborsClassifier\n",
-    "    from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "    from sklearn.metrics import f1_score, precision_score, recall_score, accuracy_score\n",
-    "    from sklearn.preprocessing import StandardScaler\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np\n",
-    "\n",
     "    # Create feature vectors for all users based on their skills\n",
     "    # First, identify all unique skills in the dataset\n",
     "    all_skills = set()\n",
@@ -1096,34 +1106,11 @@
       "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
       "KNN: F1=0.994, Precision=0.990, Recall=0.998, Accuracy=0.995\n",
       "\n",
-      "Evaluating matching for skill: Data Science\n",
-      "SVM: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
-      "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
-      "KNN: F1=0.837, Precision=1.000, Recall=0.720, Accuracy=0.972\n",
-      "\n",
-      "Evaluating matching for skill: AI\n",
-      "SVM: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
-      "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
-      "KNN: F1=0.788, Precision=1.000, Recall=0.650, Accuracy=0.965\n",
-      "\n",
-      "=== Model Performance Summary ===\n",
-      "Best model for Accuracy: SVM with score 1.000\n",
-      "Best model for Precision: SVM with score 1.000\n",
-      "Best model for Recall: SVM with score 1.000\n",
-      "Best model for F1: SVM with score 1.000\n",
-      "\n",
-      "Detailed Model Comparison:\n",
-      "Metric         Accuracy     F1  Precision  Recall\n",
-      "Model                                            \n",
-      "Decision Tree     1.000  1.000      1.000     1.0\n",
-      "KNN               0.979  0.879      0.998     0.8\n",
-      "SVM               1.000  1.000      1.000     1.0\n",
-      "\n",
-      "Overall Best Model: SVM with average score 1.000\n"
+      "Evaluating matching for skill: Data Science\n"
      ]
     }
    ],
-   "execution_count": 100
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -1141,13 +1128,6 @@
    "cell_type": "code",
    "source": [
     "def find_learning_partners_enhanced(user_id, df, n_recommendations=3, algorithm='all'):\n",
-    "    from sklearn.neighbors import KNeighborsClassifier\n",
-    "    from sklearn.svm import SVC\n",
-    "    from sklearn.tree import DecisionTreeClassifier\n",
-    "    from sklearn.preprocessing import StandardScaler\n",
-    "    from sklearn.model_selection import cross_val_score\n",
-    "    import matplotlib.pyplot as plt\n",
-    "\n",
     "    # Get user data\n",
     "    if user_id not in df['user_id'].values:\n",
     "        return {\"error\": \"User not found\"}\n",
@@ -1686,7 +1666,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "ADD SVM IMPLM",
+   "source": "# Chatbot with Enhanced Skill Matching without NLP",
    "id": "4c247ca8bbc55ca"
   },
   {
@@ -1699,17 +1679,6 @@
    "cell_type": "code",
    "source": [
     "def enhanced_skill_chatbot(df):\n",
-    "    from sklearn.svm import SVC\n",
-    "    from sklearn.tree import DecisionTreeClassifier\n",
-    "    from sklearn.neighbors import KNeighborsClassifier\n",
-    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "    from sklearn.pipeline import Pipeline\n",
-    "    from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "    from sklearn.metrics import classification_report, f1_score, precision_score\n",
-    "    import matplotlib.pyplot as plt\n",
-    "    import numpy as np\n",
-    "    import pandas as pd\n",
-    "\n",
     "    # Create training data for intent classification\n",
     "    intents = [\n",
     "        {\n",
@@ -1851,6 +1820,7 @@
     "        cv_accuracy = cross_val_score(classifier, X, y, cv=5, scoring='accuracy')\n",
     "        cv_f1 = cross_val_score(classifier, X, y, cv=5, scoring='f1_macro')\n",
     "        cv_precision = cross_val_score(classifier, X, y, cv=5, scoring='precision_macro')\n",
+    "        cv_recall = cross_val_score(classifier, X, y, cv=5, scoring='recall_macro')\n",
     "\n",
     "        # Train on training set\n",
     "        classifier.fit(X_train, y_train)\n",
@@ -1866,6 +1836,7 @@
     "            'cv_f1_std': np.std(cv_f1),\n",
     "            'cv_precision_mean': np.mean(cv_precision),\n",
     "            'cv_precision_std': np.std(cv_precision),\n",
+    "            'cv_recall': np.mean(cv_recall),\n",
     "            'test_f1': f1_score(y_test, y_pred, average='macro'),\n",
     "            'test_precision': precision_score(y_test, y_pred, average='macro'),\n",
     "            'classifier': classifier,\n",
@@ -1875,8 +1846,8 @@
     "    # Plot comparison results\n",
     "    plt.figure(figsize=(12, 8))\n",
     "\n",
-    "    metrics = ['cv_accuracy_mean', 'cv_f1_mean', 'cv_precision_mean']\n",
-    "    metric_labels = ['Accuracy', 'F1 Score', 'Precision']\n",
+    "    metrics = ['cv_accuracy_mean', 'cv_f1_mean', 'cv_precision_mean', 'test_f1', 'test_precision']\n",
+    "    metric_labels = ['Accuracy', 'F1 Score', 'Precision', 'Test F1', 'Test Precision']\n",
     "    model_names = list(results.keys())\n",
     "\n",
     "    x = np.arange(len(model_names))\n",
