--- a/sample.ipynb
+++ b/sample.ipynb
@@ -13,8 +13,8 @@
    "id": "fbc121e30a2defb3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:07.664861Z",
-     "start_time": "2025-03-13T12:35:07.651973Z"
+     "end_time": "2025-04-23T08:45:23.884780Z",
+     "start_time": "2025-04-23T08:45:21.643528Z"
     }
    },
    "source": [
@@ -84,12 +84,12 @@
        "True"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 111
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -104,15 +104,15 @@
    "id": "c3c4253ba58939f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:07.814302Z",
-     "start_time": "2025-03-13T12:35:07.790385Z"
+     "end_time": "2025-04-23T08:45:23.932335Z",
+     "start_time": "2025-04-23T08:45:23.908349Z"
     }
    },
    "source": [
     "df = pd.read_csv('data/edited_skill_exchange_dataset.csv')"
    ],
    "outputs": [],
-   "execution_count": 112
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -128,8 +128,8 @@
    "id": "eb947f599c010912",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:07.835325Z",
-     "start_time": "2025-03-13T12:35:07.827491Z"
+     "end_time": "2025-04-23T08:45:24.160262Z",
+     "start_time": "2025-04-23T08:45:24.154229Z"
     }
    },
    "source": [
@@ -179,7 +179,7 @@
      ]
     }
    ],
-   "execution_count": 113
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -194,8 +194,8 @@
    "id": "577b2c28632f85ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:08.312587Z",
-     "start_time": "2025-03-13T12:35:07.910024Z"
+     "end_time": "2025-04-23T08:45:24.524329Z",
+     "start_time": "2025-04-23T08:45:24.172157Z"
     }
    },
    "source": [
@@ -434,7 +434,28 @@
      ]
     }
    ],
-   "execution_count": 114
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-23T08:45:24.541260Z",
+     "start_time": "2025-04-23T08:45:24.536539Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(\"Dataset Shape:\", df.shape)",
+   "id": "da55bc3b7bd2991",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Shape: (10000, 12)\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -450,8 +471,8 @@
    "id": "8a7ca75d2db4fcb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:09.366485Z",
-     "start_time": "2025-03-13T12:35:08.382445Z"
+     "end_time": "2025-04-23T08:45:25.453254Z",
+     "start_time": "2025-04-23T08:45:24.566831Z"
     }
    },
    "source": [
@@ -490,7 +511,7 @@
     "plt.close()"
    ],
    "outputs": [],
-   "execution_count": 115
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -505,8 +526,8 @@
    "id": "33b46cd18c959443",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:09.445706Z",
-     "start_time": "2025-03-13T12:35:09.440404Z"
+     "end_time": "2025-04-23T08:45:25.462732Z",
+     "start_time": "2025-04-23T08:45:25.458261Z"
     }
    },
    "source": [
@@ -519,7 +540,7 @@
     "    return list(set(all_items))"
    ],
    "outputs": [],
-   "execution_count": 116
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -534,8 +555,8 @@
    "id": "883f21790111ea3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:09.689215Z",
-     "start_time": "2025-03-13T12:35:09.631872Z"
+     "end_time": "2025-04-23T08:45:25.509407Z",
+     "start_time": "2025-04-23T08:45:25.478893Z"
     }
    },
    "source": [
@@ -558,7 +579,7 @@
      ]
     }
    ],
-   "execution_count": 117
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -573,8 +594,8 @@
    "id": "7709cad99d6f128",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:10.390891Z",
-     "start_time": "2025-03-13T12:35:09.785543Z"
+     "end_time": "2025-04-23T08:45:26.050599Z",
+     "start_time": "2025-04-23T08:45:25.522172Z"
     }
    },
    "source": [
@@ -601,7 +622,7 @@
     "plot_top_items(df, 'desired_skills', 'Desired Skills')"
    ],
    "outputs": [],
-   "execution_count": 118
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -612,8 +633,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:10.520829Z",
-     "start_time": "2025-03-13T12:35:10.395122Z"
+     "end_time": "2025-04-23T08:45:26.174715Z",
+     "start_time": "2025-04-23T08:45:26.062560Z"
     }
    },
    "cell_type": "code",
@@ -640,7 +661,7 @@
    ],
    "id": "96efd51e8ee92d1f",
    "outputs": [],
-   "execution_count": 119
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -651,8 +672,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:10.598978Z",
-     "start_time": "2025-03-13T12:35:10.587462Z"
+     "end_time": "2025-04-23T08:45:26.210990Z",
+     "start_time": "2025-04-23T08:45:26.200094Z"
     }
    },
    "cell_type": "code",
@@ -679,7 +700,7 @@
      ]
     }
    ],
-   "execution_count": 120
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -690,8 +711,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:12.109775Z",
-     "start_time": "2025-03-13T12:35:10.663889Z"
+     "end_time": "2025-04-23T08:45:28.095614Z",
+     "start_time": "2025-04-23T08:45:26.234606Z"
     }
    },
    "cell_type": "code",
@@ -716,13 +737,13 @@
    ],
    "id": "8acfb43beefbdac6",
    "outputs": [],
-   "execution_count": 121
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:13.261909Z",
-     "start_time": "2025-03-13T12:35:12.181626Z"
+     "end_time": "2025-04-23T08:45:29.182267Z",
+     "start_time": "2025-04-23T08:45:28.118990Z"
     }
    },
    "cell_type": "code",
@@ -788,7 +809,7 @@
      ]
     }
    ],
-   "execution_count": 122
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -799,8 +820,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T12:35:14.174598Z",
-     "start_time": "2025-03-13T12:35:13.324161Z"
+     "end_time": "2025-04-23T08:45:31.908193Z",
+     "start_time": "2025-04-23T08:45:29.210552Z"
     }
    },
    "cell_type": "code",
@@ -821,7 +842,8 @@
     "X_train, X_test, y_train, y_test = train_test_split(X_svm, y_svm, test_size=0.3, random_state=42)\n",
     "\n",
     "# Train SVM model\n",
-    "svm_model = SVC(kernel='linear', probability=True, random_state=42)\n",
+    "# rba sinusoidale etc etc\n",
+    "svm_model = SVC(kernel='poly', probability=True, random_state=42)\n",
     "svm_model.fit(X_train, y_train)\n",
     "\n",
     "# Evaluate model\n",
@@ -861,7 +883,7 @@
      ]
     }
    ],
-   "execution_count": 123
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -874,11 +896,9 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-03-13T12:35:14.240477Z"
+     "end_time": "2025-04-23T08:49:32.675592Z",
+     "start_time": "2025-04-23T08:45:31.985937Z"
     }
    },
    "cell_type": "code",
@@ -1106,11 +1126,34 @@
       "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
       "KNN: F1=0.994, Precision=0.990, Recall=0.998, Accuracy=0.995\n",
       "\n",
-      "Evaluating matching for skill: Data Science\n"
+      "Evaluating matching for skill: Data Science\n",
+      "SVM: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
+      "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
+      "KNN: F1=0.837, Precision=1.000, Recall=0.720, Accuracy=0.972\n",
+      "\n",
+      "Evaluating matching for skill: AI\n",
+      "SVM: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
+      "Decision Tree: F1=1.000, Precision=1.000, Recall=1.000, Accuracy=1.000\n",
+      "KNN: F1=0.788, Precision=1.000, Recall=0.650, Accuracy=0.965\n",
+      "\n",
+      "=== Model Performance Summary ===\n",
+      "Best model for Accuracy: SVM with score 1.000\n",
+      "Best model for Precision: SVM with score 1.000\n",
+      "Best model for Recall: SVM with score 1.000\n",
+      "Best model for F1: SVM with score 1.000\n",
+      "\n",
+      "Detailed Model Comparison:\n",
+      "Metric         Accuracy     F1  Precision  Recall\n",
+      "Model                                            \n",
+      "Decision Tree     1.000  1.000      1.000     1.0\n",
+      "KNN               0.979  0.879      0.998     0.8\n",
+      "SVM               1.000  1.000      1.000     1.0\n",
+      "\n",
+      "Overall Best Model: SVM with average score 1.000\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1121,8 +1164,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:53:43.140907Z",
-     "start_time": "2025-03-13T11:53:43.114007Z"
+     "end_time": "2025-04-23T08:49:32.756707Z",
+     "start_time": "2025-04-23T08:49:32.739654Z"
     }
    },
    "cell_type": "code",
@@ -1266,13 +1309,13 @@
    ],
    "id": "e3e818a5e286a8f5",
    "outputs": [],
-   "execution_count": 101
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:54:22.348280Z",
-     "start_time": "2025-03-13T11:53:43.237108Z"
+     "end_time": "2025-04-23T08:50:20.727093Z",
+     "start_time": "2025-04-23T08:49:32.832215Z"
     }
    },
    "cell_type": "code",
@@ -1339,7 +1382,7 @@
      ]
     }
    ],
-   "execution_count": 102
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -1350,8 +1393,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:54:22.360372Z",
-     "start_time": "2025-03-13T11:54:22.353576Z"
+     "end_time": "2025-04-23T08:50:20.737306Z",
+     "start_time": "2025-04-23T08:50:20.732260Z"
     }
    },
    "cell_type": "code",
@@ -1402,7 +1445,7 @@
    ],
    "id": "6693abfde284c66f",
    "outputs": [],
-   "execution_count": 103
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -1413,8 +1456,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:54:22.480928Z",
-     "start_time": "2025-03-13T11:54:22.433470Z"
+     "end_time": "2025-04-23T08:50:27.939033Z",
+     "start_time": "2025-04-23T08:50:20.782465Z"
     }
    },
    "cell_type": "code",
@@ -1459,13 +1502,13 @@
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:54:22.566088Z",
-     "start_time": "2025-03-13T11:54:22.561034Z"
+     "end_time": "2025-04-23T08:50:28.026479Z",
+     "start_time": "2025-04-23T08:50:28.020204Z"
     }
    },
    "cell_type": "code",
@@ -1495,7 +1538,7 @@
    ],
    "id": "ce2f9aeee379a5b6",
    "outputs": [],
-   "execution_count": 105
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -1506,8 +1549,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:54:22.727169Z",
-     "start_time": "2025-03-13T11:54:22.710681Z"
+     "end_time": "2025-04-23T08:50:28.225016Z",
+     "start_time": "2025-04-23T08:50:28.186614Z"
     }
    },
    "cell_type": "code",
@@ -1601,7 +1644,7 @@
      ]
     }
    ],
-   "execution_count": 106
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -1612,8 +1655,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:57:50.689393Z",
-     "start_time": "2025-03-13T11:57:31.102189Z"
+     "end_time": "2025-04-23T08:50:54.363275Z",
+     "start_time": "2025-04-23T08:50:28.263628Z"
     }
    },
    "cell_type": "code",
@@ -1661,7 +1704,7 @@
      ]
     }
    ],
-   "execution_count": 108
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -1672,8 +1715,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-13T11:58:12.288248Z",
-     "start_time": "2025-03-13T11:58:11.667732Z"
+     "end_time": "2025-04-23T08:50:55.205591Z",
+     "start_time": "2025-04-23T08:50:54.507402Z"
     }
    },
    "cell_type": "code",
@@ -2023,20 +2066,20 @@
       "A: Based on your interests, I recommend starting with Machine Learning, then moving to AI.\n",
       "\n",
       "Q: How long does it take to learn Python?\n",
-      "A: Most people become proficient in Python after 2-3 months of study.\n",
+      "A: Learning Python typically takes 2-3 months of consistent practice.\n",
       "\n",
       "Q: Can you help me find a study partner for JavaScript?\n",
-      "A: Our matching algorithm can find you ideal study partners based on your interests.\n",
+      "A: Let me match you with peers who are looking to study {}.\n",
       "\n",
       "Q: Should I learn React or Angular first?\n",
-      "A: When comparing {} and {}, consider your goals: {}.\n",
+      "A: Both {} and {} are valuable, but {} might be better for beginners.\n",
       "\n",
       "Q: What are the most in-demand skills right now?\n",
       "A: Currently trending skills include: {}.\n"
      ]
     }
    ],
-   "execution_count": 110
+   "execution_count": 23
   }
  ],
  "metadata": {
