implementation xgboost dso 3

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -194,8 +194,8 @@
    "id": "577b2c28632f85ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-23T08:45:24.524329Z",
-     "start_time": "2025-04-23T08:45:24.172157Z"
+     "end_time": "2025-04-24T13:27:41.472815Z",
+     "start_time": "2025-04-24T13:27:40.776489Z"
     }
    },
    "source": [
@@ -337,104 +337,18 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting comprehensive data cleaning process...\n",
-      "Initial shape: (10000, 6)\n",
-      "\n",
-      "Missing values before imputation:\n",
-      "Series([], dtype: int64)\n",
-      "Found 26 outliers in skills_count\n",
-      "Found 35 outliers in desired_skills_count\n",
-      "\n",
-      "Final shape after cleaning: (10000, 12)\n",
-      "Data cleaning completed successfully\n",
-      "\n",
-      "Sample of cleaned data:\n",
-      "   user_id joinedDate                            joinedCourses  \\\n",
-      "0        1 2022-08-28  Machine Learning, CSS, Excel, SQL, HTML   \n",
-      "1        2 2023-12-04  Data Science, Excel, Python, JavaScript   \n",
-      "2        3 2023-04-10          JavaScript, Python, Excel, Java   \n",
-      "3        4 2022-01-30              AI, Machine Learning, Excel   \n",
-      "4        5 2022-09-07                                   Python   \n",
-      "\n",
-      "                               skills  \\\n",
-      "0                           HTML, SQL   \n",
-      "1   HTML, CSS, JavaScript, Excel, SQL   \n",
-      "2                     HTML, CSS, Java   \n",
-      "3  HTML, Excel, SQL, Java, Blockchain   \n",
-      "4                 CSS, JavaScript, AI   \n",
-      "\n",
-      "                                      desired_skills  isVerified  \\\n",
-      "0  CSS, Java, Machine Learning, Blockchain, Data ...           0   \n",
-      "1               JavaScript, Python, Java, Nodejs, AI           1   \n",
-      "2                                   CSS, SQL, Nodejs           1   \n",
-      "3  SQL, Nodejs, Machine Learning, Blockchain, Dat...           1   \n",
-      "4                    HTML, CSS, Java, AI, Blockchain           0   \n",
-      "\n",
-      "   membershipDuration  course_count  skills_count  desired_skills_count  \\\n",
-      "0                 927             5             2                     5   \n",
-      "1                 464             4             5                     5   \n",
-      "2                 702             4             3                     3   \n",
-      "3                1137             3             5                     5   \n",
-      "4                 917             1             3                     5   \n",
-      "\n",
-      "   skill_overlap  user_activity_score  \n",
-      "0              0                0.545  \n",
-      "1              1                0.734  \n",
-      "2              1                0.689  \n",
-      "3              2                0.789  \n",
-      "4              2                0.346  \n",
-      "\n",
-      "Summary statistics:\n",
-      "           user_id                     joinedDate    isVerified  \\\n",
-      "count  10000.00000                          10000  10000.000000   \n",
-      "mean    5000.50000  2023-01-03 07:45:59.040000256      0.506000   \n",
-      "min        1.00000            2022-01-01 00:00:00      0.000000   \n",
-      "25%     2500.75000            2022-07-07 00:00:00      0.000000   \n",
-      "50%     5000.50000            2023-01-04 00:00:00      1.000000   \n",
-      "75%     7500.25000            2023-07-03 00:00:00      1.000000   \n",
-      "max    10000.00000            2024-01-01 00:00:00      1.000000   \n",
-      "std     2886.89568                            NaN      0.499989   \n",
-      "\n",
-      "       membershipDuration  course_count  skills_count  desired_skills_count  \\\n",
-      "count        10000.000000  10000.000000  10000.000000           10000.00000   \n",
-      "mean           798.676400      3.011200      3.412900               4.88140   \n",
-      "min            436.000000      1.000000      1.000000               1.00000   \n",
-      "25%            618.000000      2.000000      2.000000               4.00000   \n",
-      "50%            798.000000      3.000000      3.000000               5.00000   \n",
-      "75%            979.000000      4.000000      4.000000               6.00000   \n",
-      "max           1166.000000      5.000000      7.000000               9.00000   \n",
-      "std            209.582501      1.410629      1.405209               1.63756   \n",
-      "\n",
-      "       skill_overlap  user_activity_score  \n",
-      "count   10000.000000         10000.000000  \n",
-      "mean        1.187200             0.565130  \n",
-      "min         0.000000             0.181000  \n",
-      "25%         0.000000             0.457000  \n",
-      "50%         1.000000             0.564000  \n",
-      "75%         2.000000             0.674000  \n",
-      "max         7.000000             0.999000  \n",
-      "std         1.012847             0.148752  \n",
-      "\n",
-      "Column information after cleaning:\n",
-      "user_id: int64\n",
-      "joinedDate: datetime64[ns]\n",
-      "joinedCourses: object with 5027 unique values\n",
-      "skills: object with 1270 unique values\n",
-      "desired_skills: object with 2808 unique values\n",
-      "isVerified: int64\n",
-      "membershipDuration: int64\n",
-      "course_count: int64\n",
-      "skills_count: int64\n",
-      "desired_skills_count: int64\n",
-      "skill_overlap: int64\n",
-      "user_activity_score: float64\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 116\u001B[39m\n\u001B[32m    113\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m df_clean\n\u001B[32m    115\u001B[39m \u001B[38;5;66;03m# Apply the comprehensive cleaning function\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m116\u001B[39m df_cleaned = clean_dataset(\u001B[43mdf\u001B[49m)\n\u001B[32m    118\u001B[39m \u001B[38;5;66;03m# Show a sample of the cleaned data\u001B[39;00m\n\u001B[32m    119\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[33mSample of cleaned data:\u001B[39m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[31mNameError\u001B[39m: name 'df' is not defined"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 1
   },
   {
    "metadata": {
